# cop3014-math-functions-with-sfml

./: CMakeLists.txt
app/: main.cpp  myMath.cpp  myMath.h
